# slot-map

./: CLAUDE.md  CMakeLists.txt  README.md
.cache/clangd/index/: slot-map-test.cpp.B498D1ADCAE676B8.idx  slot-map.cpp.CA982CE19B147A51.idx  slot_map.cpp.CCDD8D78633B11CE.idx  slot_map_test.cpp.96AD755824576F68.idx
src/: slot_map.cpp
test/: slot_map_test.cpp
